--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/98414857" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7K0TX6L7BK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7K0TX6L7BK');
+</script>
 </head>
 <body>
     <div class="names-container">
